# maybe-valid

./: .gitignore  Cargo.toml  README.md
src/: api.rs  lib.rs  no_std.rs  string.rs
src/impls/: alloc_impls.rs  core_impls.rs  mod.rs
tests/: comprehensive.rs
